src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__string_comparison_with_constant_test.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%STRING_EQUAL_interface = type { [1025 x i8], [1025 x i8] }
%baz_interface = type { [81 x i8], [81 x i8], i1 }

define i1 @STRING_EQUAL(%STRING_EQUAL_interface* %0) {
entry:
  %op1 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %0, i32 0, i32 0
  %op2 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %0, i32 0, i32 1
  %STRING_EQUAL = alloca i1, align 1
  %STRING_EQUAL_ret = load i1, i1* %STRING_EQUAL, align 1
  ret i1 %STRING_EQUAL_ret
}

define i16 @baz(%baz_interface* %0) {
entry:
  %a = getelementptr inbounds %baz_interface, %baz_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %baz_interface, %baz_interface* %0, i32 0, i32 1
  %result = getelementptr inbounds %baz_interface, %baz_interface* %0, i32 0, i32 2
  %baz = alloca i16, align 2
  %STRING_EQUAL_instance = alloca %STRING_EQUAL_interface, align 8
  br label %input

input:                                            ; preds = %entry
  %1 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance, i32 0, i32 0
  %load_a = load [81 x i8], [81 x i8]* %a, align 1
  store [81 x i8] %load_a, [1025 x i8]* %1, align 1
  %2 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance, i32 0, i32 1
  store [2 x i8] c"b\00", [1025 x i8]* %2, align 1
  br label %call

call:                                             ; preds = %input
  %call1 = call i1 @STRING_EQUAL(%STRING_EQUAL_interface* %STRING_EQUAL_instance)
  br label %output

output:                                           ; preds = %call
  br label %continue

continue:                                         ; preds = %output
  store i1 %call1, i1* %result, align 1
  %STRING_EQUAL_instance2 = alloca %STRING_EQUAL_interface, align 8
  br label %input3

input3:                                           ; preds = %continue
  %3 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance2, i32 0, i32 0
  store [2 x i8] c"a\00", [1025 x i8]* %3, align 1
  %4 = getelementptr inbounds %STRING_EQUAL_interface, %STRING_EQUAL_interface* %STRING_EQUAL_instance2, i32 0, i32 1
  %load_b = load [81 x i8], [81 x i8]* %b, align 1
  store [81 x i8] %load_b, [1025 x i8]* %4, align 1
  br label %call4

call4:                                            ; preds = %input3
  %call7 = call i1 @STRING_EQUAL(%STRING_EQUAL_interface* %STRING_EQUAL_instance2)
  br label %output5

output5:                                          ; preds = %call4
  br label %continue6

continue6:                                        ; preds = %output5
  store i1 %call7, i1* %result, align 1
  %baz_ret = load i16, i16* %baz, align 2
  ret i16 %baz_ret
}

