src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__strings_in_function_return.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"hello\00"

define void @func(i8* %0, [81 x i8]* %1) {
entry:
  %func = alloca i8*, align [filtered]
  store i8* %0, i8** %func, align [filtered]
  %myout = alloca [81 x i8]*, align [filtered]
  store [81 x i8]* %1, [81 x i8]** %myout, align [filtered]
  %deref = load i8*, i8** %func, align [filtered]
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %deref, i8* align [filtered] getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_0, i32 0, i32 0), i32 6, i1 false)
  %deref1 = load [81 x i8]*, [81 x i8]** %myout, align [filtered]
  %2 = bitcast [81 x i8]* %deref1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %2, i8* align [filtered] getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_0, i32 0, i32 0), i32 6, i1 false)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i32(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i32, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }
