src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__type_mix_in_call.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @foo(i16 signext %0) {
entry:
  %foo = alloca i16, align [filtered]
  %in = alloca i16, align [filtered]
  store i16 %0, ptr %in, align [filtered]
  store i16 0, ptr %foo, align [filtered]
  %foo_ret = load i16, ptr %foo, align [filtered]
  ret i16 %foo_ret
}

define signext i16 @baz() {
entry:
  %baz = alloca i16, align [filtered]
  store i16 0, ptr %baz, align [filtered]
  %call = call signext i16 @foo(i16 signext 1)
  %baz_ret = load i16, ptr %baz, align [filtered]
  ret i16 %baz_ret
}
