src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__unnecessary_casts_between_pointer_types.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%baz = type { i8*, i8, i8, i8 }

@baz_instance = global %baz zeroinitializer

define void @baz(%baz* %0) {
entry:
  %ptr = getelementptr inbounds %baz, %baz* %0, i32 0, i32 0
  %b = getelementptr inbounds %baz, %baz* %0, i32 0, i32 1
  %si = getelementptr inbounds %baz, %baz* %0, i32 0, i32 2
  %mb = getelementptr inbounds %baz, %baz* %0, i32 0, i32 3
  store i8* %b, i8** %ptr, align [filtered]
  store i8* %si, i8** %ptr, align [filtered]
  store i8* %mb, i8** %ptr, align [filtered]
  ret void
}
